# CV_code_for_AUV

./: CMakeLists.txt  main.cpp
include/buckets/: BucketDescriptor.h  BucketDetector.h
include/mat/: MatDescriptor.h  MatDetector.h
include/util/: ColorPicker.h  ImgprocPipeline.h  ImgprocUtil.h
src/buckets/: BucketDescriptor.cpp  BucketDetector.cpp
src/mat/: MatDescriptor.cpp  MatDetector.cpp
src/util/: ColorPicker.cpp  ImgprocPipeline.cpp  ImgprocUtil.cpp
